# NaiaTrade

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: bias.yaml  ict_v1.3.yaml  risk.yaml  sltp_standards.yaml
core/: __init__.py
core/data/: __init__.py
core/execution/: __init__.py
core/ict/: __init__.py
core/llm/: __init__.py
core/market/: __init__.py
core/monitor/: __init__.py
core/onchain/: __init__.py
core/replay/: __init__.py
core/risk/: __init__.py  bias_config.py  config_loader.py  types.py
core/strategy/: __init__.py
docs/: 00-discussion-log.md  01-ict-specs-v1.3.md  02-architecture-decisions.md  03-risk-manager-spec.md  04-llm-prompt-spec.md  05-data-flow-architecture.md  06-implementation-roadmap.md  07-on-chain-integration.md  08-replay-mode-spec.md  09-sltp-optimization.md
scripts/: __init__.py  download_historical.py  replay.py  replay_compare.py  run_backtest.py
tests/data/: __init__.py
tests/execution/: __init__.py
tests/ict/: __init__.py
tests/llm/: __init__.py
tests/market/: __init__.py
tests/monitor/: __init__.py
tests/onchain/: __init__.py
tests/replay/: __init__.py
tests/risk/: __init__.py  test_bias_config.py  test_config_loader.py  test_types.py
tests/strategy/: __init__.py
