[project]
name = "naiatrade"
version = "0.1.0"
description = "ICT automated trading bot for Binance Futures"
requires-python = ">=3.11"
license = {text = "Proprietary — Naia Group"}
authors = [
    {name = "Naia Group"}
]

dependencies = [
    "ccxt>=4.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "redis>=5.0",
    "psycopg>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "httpx>=0.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "pandas-stubs>=2.1",
]
backtest = [
    "vectorbt>=0.6",
]
viz = [
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
branch = true
